added seo to site

--- a/index.html
+++ b/index.html
@@ -5,45 +5,71 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-  <!-- SEO Meta Tags -->
-  <title>Ali Pakdelnia | Full Stack Developer | Android Developer | Tehran</title>
-  <meta name="description" content="Ali Pakdelnia - Full Stack Developer and Android Developer in Tehran. Expert in .NET Core, Kotlin, React and Angular. 5 years experience in software development.">
-  <meta name="keywords" content="Ali Pakdelnia, علی پاکدل نیا, علی پاکدل, پاکدل نیا, پاکدل, Full Stack Developer, Android Developer, .NET Core, Kotlin, React, Angular, Tehran Developer, Freelance Developer">
+  <!-- Enhanced SEO Meta Tags -->
+  <title>Ali Pakdelnia | Full Stack Developer | Android Developer | .NET Core | Kotlin | Tehran</title>
+  <meta name="description" content="Ali Pakdelnia - Experienced Full Stack Developer and Android Developer in Tehran. Expert in .NET Core, Kotlin, React, Angular, JavaScript, TypeScript. 5+ years experience in software development. Available for freelance projects.">
+  <meta name="keywords" content="Ali Pakdelnia, علی پاکدل نیا, علی پاکدل, پاکدل نیا, پاکدل, Full Stack Developer, Android Developer, .NET Core Developer, Kotlin Developer, React Developer, Angular Developer, JavaScript Developer, TypeScript Developer, Tehran Developer, Iran Developer, Freelance Developer, Web Developer, Mobile Developer, Software Engineer, Tehran, Iran, Portfolio, Resume, Projects, AliFood, AliPool, PsychoApp, Denaru">
   <meta name="author" content="Ali Pakdelnia">
-  <meta name="robots" content="index, follow">
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+  <meta name="googlebot" content="index, follow">
   
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Ali Pakdelnia | Full Stack Developer and Android Developer">
-  <meta property="og:description" content="Ali Pakdelnia - Full Stack Developer and Android Developer in Tehran. Expert in .NET Core, Kotlin, React and Angular.">
+  <!-- Language-specific Meta Tags -->
+  <meta name="language" content="English">
+  <meta name="geo.region" content="IR">
+  <meta name="geo.placename" content="Tehran">
+  <meta name="geo.position" content="35.6892;51.389">
+  <meta name="ICBM" content="35.6892, 51.389">
+  
+  <!-- Enhanced Open Graph Meta Tags -->
+  <meta property="og:title" content="Ali Pakdelnia | Full Stack Developer | Android Developer | .NET Core | Kotlin">
+  <meta property="og:description" content="Ali Pakdelnia - Experienced Full Stack Developer and Android Developer in Tehran. Expert in .NET Core, Kotlin, React, Angular. 5+ years experience. Available for freelance projects.">
   <meta property="og:image" content="https://alipakdelnia.github.io/assets/img/my-profile-img.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Ali Pakdelnia - Full Stack Developer">
   <meta property="og:url" content="https://alipakdelnia.github.io/">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_US">
+  <meta property="og:site_name" content="Ali Pakdelnia Portfolio">
   
-  <!-- Twitter Card Meta Tags -->
+  <!-- Enhanced Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Ali Pakdelnia | Full Stack Developer and Android Developer">
-  <meta name="twitter:description" content="Ali Pakdelnia - Full Stack Developer and Android Developer in Tehran">
+  <meta name="twitter:title" content="Ali Pakdelnia | Full Stack Developer | Android Developer">
+  <meta name="twitter:description" content="Experienced Full Stack Developer and Android Developer in Tehran. Expert in .NET Core, Kotlin, React, Angular. Available for freelance projects.">
   <meta name="twitter:image" content="https://alipakdelnia.github.io/assets/img/my-profile-img.jpg">
+  <meta name="twitter:image:alt" content="Ali Pakdelnia - Full Stack Developer">
+  <meta name="twitter:creator" content="@alipakdelnia">
+  <meta name="twitter:site" content="@alipakdelnia">
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://alipakdelnia.github.io/">
   
-  <!-- Language Alternates -->
+  <!-- Enhanced Language Alternates -->
   <link rel="alternate" hreflang="en" href="https://alipakdelnia.github.io/">
-  <link rel="alternate" hreflang="fa" href="https://alipakdelnia.github.io/fa/">
+  <link rel="alternate" hreflang="fa" href="https://alipakdelnia.github.io/">
+  <link rel="alternate" hreflang="ar" href="https://alipakdelnia.github.io/">
+  <link rel="alternate" hreflang="de" href="https://alipakdelnia.github.io/">
   <link rel="alternate" hreflang="x-default" href="https://alipakdelnia.github.io/">
 
   <!-- PWA Manifest -->
   <link rel="manifest" href="manifest.json">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <!-- Enhanced Favicons -->
+  <link href="assets/img/favicon.png" rel="icon" type="image/png">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="assets/img/favicon.png" rel="icon" type="image/png" sizes="32x32">
+  <link href="assets/img/favicon.png" rel="icon" type="image/png" sizes="16x16">
+  <meta name="theme-color" content="#007bff">
 
-  <!-- Fonts -->
+  <!-- Preconnect for Performance -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://alipakdelnia.github.io" rel="preconnect">
+  <link href="https://github.com" rel="preconnect">
+  <link href="https://linkedin.com" rel="preconnect">
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
@@ -84,15 +110,15 @@
     }
   </style>
 
-  <!-- Structured Data -->
+  <!-- Enhanced Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Ali Pakdelnia",
-    "alternateName": ["علی پاکدل نیا", "علی پاکدل", "پاکدل نیا"],
+    "alternateName": ["علی پاکدل نیا", "علی پاکدل", "پاکدل نیا", "Ali Pakdelnia"],
     "jobTitle": "Full Stack Developer and Android Developer",
-    "description": "Ali Pakdelnia - Full Stack Developer and Android Developer in Tehran with 5 years experience in software development",
+    "description": "Ali Pakdelnia - Experienced Full Stack Developer and Android Developer in Tehran with 5+ years experience in software development. Expert in .NET Core, Kotlin, React, Angular, JavaScript, TypeScript.",
     "url": "https://alipakdelnia.github.io/",
     "image": "https://alipakdelnia.github.io/assets/img/my-profile-img.jpg",
     "email": "ali.pakdelnia77@gmail.com",
@@ -100,7 +126,8 @@
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Tehran",
-      "addressCountry": "Iran"
+      "addressCountry": "Iran",
+      "addressRegion": "Tehran Province"
     },
     "sameAs": [
       "https://github.com/alipakdelnia",
@@ -114,21 +141,47 @@
       "React",
       "Angular",
       "JavaScript",
-      "TypeScript"
+      "TypeScript",
+      "Web Development",
+      "Mobile Development",
+      "Software Engineering",
+      "Database Design",
+      "API Development",
+      "UI/UX Design"
     ],
     "worksFor": [
       {
         "@type": "Organization",
-        "name": "Beniamin Company"
+        "name": "Beniamin Company",
+        "url": "https://beniamin.com"
       },
       {
         "@type": "Organization", 
-        "name": "Saze Rahavard Dena"
+        "name": "Saze Rahavard Dena",
+        "url": "https://denaru.com"
       }
     ],
     "alumniOf": {
       "@type": "EducationalOrganization",
-      "name": "Isfahan University of Technology"
+      "name": "Isfahan University of Technology",
+      "url": "https://iut.ac.ir"
+    },
+    "award": [
+      "Winner of 11th Mobile Programming Marathon - Sharif University of Technology 2023"
+    ],
+    "knowsLanguage": ["English", "Persian", "Arabic", "German"],
+    "nationality": "Iranian",
+    "birthPlace": {
+      "@type": "Place",
+      "name": "Iran"
+    },
+    "hasOccupation": {
+      "@type": "Occupation",
+      "name": "Software Developer",
+      "occupationLocation": {
+        "@type": "Place",
+        "name": "Tehran, Iran"
+      }
     }
   }
   </script>
@@ -138,9 +191,9 @@
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
-    "name": "Ali Pakdelnia - Full Stack Developer",
+    "name": "Ali Pakdelnia - Full Stack Developer Portfolio",
     "url": "https://alipakdelnia.github.io/",
-    "description": "Ali Pakdelnia - Full Stack Developer and Android Developer in Tehran",
+    "description": "Ali Pakdelnia - Experienced Full Stack Developer and Android Developer in Tehran. Expert in .NET Core, Kotlin, React, Angular. Available for freelance projects.",
     "author": {
       "@type": "Person",
       "name": "Ali Pakdelnia"
@@ -149,7 +202,14 @@
       "@type": "SearchAction",
       "target": "https://alipakdelnia.github.io/?s={search_term_string}",
       "query-input": "required name=search_term_string"
-    }
+    },
+    "publisher": {
+      "@type": "Person",
+      "name": "Ali Pakdelnia"
+    },
+    "inLanguage": ["en", "fa", "ar", "de"],
+    "datePublished": "2024-01-01",
+    "dateModified": "2024-12-29"
   }
   </script>
 
@@ -161,17 +221,54 @@
     "name": "Ali Pakdelnia - Development Services",
     "url": "https://alipakdelnia.github.io/",
     "logo": "https://alipakdelnia.github.io/assets/img/my-profile-img.jpg",
-    "description": "Full Stack and Android Development Services by Ali Pakdelnia",
+    "description": "Full Stack and Android Development Services by Ali Pakdelnia. Expert in .NET Core, Kotlin, React, Angular. Available for freelance projects and full-time opportunities.",
     "contactPoint": {
       "@type": "ContactPoint",
       "telephone": "+989909601225",
       "contactType": "customer service",
-      "email": "ali.pakdelnia77@gmail.com"
+      "email": "ali.pakdelnia77@gmail.com",
+      "availableLanguage": ["English", "Persian"]
     },
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Tehran",
-      "addressCountry": "Iran"
+      "addressCountry": "Iran",
+      "addressRegion": "Tehran Province"
+    },
+    "sameAs": [
+      "https://github.com/alipakdelnia",
+      "https://linkedin.com/in/ali-pakdelnia"
+    ],
+    "serviceArea": {
+      "@type": "Place",
+      "name": "Worldwide"
+    },
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Development Services",
+      "itemListElement": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Full Stack Development"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Android Development"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Web Development"
+          }
+        }
+      ]
     }
   }
   </script>
@@ -179,7 +276,7 @@
   <!-- =======================================================
   * Template Name: Ali Pakdelnia Portfolio
   * Template URL: https://alipakdelnia.github.io/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
+  * Updated: Dec 29 2024 with Bootstrap v5.3.3
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
