fix animation errors

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2 data-translate="hero_title">Ali Pakdelnia</h2>
-        <p><span data-translate="hero_subtitle">I'm a</span> <span class="typed" data-typed-items="hero_typed_items">Full Stack Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p><span data-translate="hero_subtitle">I'm a</span> <span class="typed" data-typed-items="Full Stack Developer,Android Developer,.NET Developer,Problem Solver,Freelancer"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
