add my domain https://alipakdelnia.ir

--- a/500.html
+++ b/500.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>خطای سرور - علی پاکدل نیا</title>
     <meta name="description" content="خطای سرور. علی پاکدل نیا - برنامه‌نویس فول استک و توسعه‌دهنده اندروید">
-    <link rel="canonical" href="https://alipakdelnia.github.io/500.html">
+    <link rel="canonical" href="https://alipakdelnia.ir/500.html">
     <style>
         body {
             font-family: 'Tahoma', Arial, sans-serif;
