--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   <!-- Enhanced Open Graph Meta Tags -->
   <meta property="og:title" content="Ali Pakdelnia | Full Stack Developer | Android Developer | .NET Core | Kotlin">
   <meta property="og:description" content="Ali Pakdelnia - Experienced Full Stack Developer and Android Developer in Tehran. Expert in .NET Core, Kotlin, React, Angular. 5+ years experience. Available for freelance projects.">
-  <meta property="og:image" content="https://alipakdelnia.github.io/assets/img/my-profile-img.jpg">
+  <meta property="og:image" content="https://alipakdelnia.ir/assets/img/my-profile-img.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="Ali Pakdelnia - Full Stack Developer">
-  <meta property="og:url" content="https://alipakdelnia.github.io/">
+  <meta property="og:url" content="https://alipakdelnia.ir/">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_US">
   <meta property="og:site_name" content="Ali Pakdelnia Portfolio">
@@ -36,20 +36,20 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Ali Pakdelnia | Full Stack Developer | Android Developer">
   <meta name="twitter:description" content="Experienced Full Stack Developer and Android Developer in Tehran. Expert in .NET Core, Kotlin, React, Angular. Available for freelance projects.">
-  <meta name="twitter:image" content="https://alipakdelnia.github.io/assets/img/my-profile-img.jpg">
+  <meta name="twitter:image" content="https://alipakdelnia.ir/assets/img/my-profile-img.jpg">
   <meta name="twitter:image:alt" content="Ali Pakdelnia - Full Stack Developer">
   <meta name="twitter:creator" content="@alipakdelnia">
   <meta name="twitter:site" content="@alipakdelnia">
   
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://alipakdelnia.github.io/">
+  <link rel="canonical" href="https://alipakdelnia.ir/">
   
   <!-- Enhanced Language Alternates -->
-  <link rel="alternate" hreflang="en" href="https://alipakdelnia.github.io/">
-  <link rel="alternate" hreflang="fa" href="https://alipakdelnia.github.io/">
-  <link rel="alternate" hreflang="ar" href="https://alipakdelnia.github.io/">
-  <link rel="alternate" hreflang="de" href="https://alipakdelnia.github.io/">
-  <link rel="alternate" hreflang="x-default" href="https://alipakdelnia.github.io/">
+  <link rel="alternate" hreflang="en" href="https://alipakdelnia.ir/">
+  <link rel="alternate" hreflang="fa" href="https://alipakdelnia.ir/">
+  <link rel="alternate" hreflang="ar" href="https://alipakdelnia.ir/">
+  <link rel="alternate" hreflang="de" href="https://alipakdelnia.ir/">
+  <link rel="alternate" hreflang="x-default" href="https://alipakdelnia.ir/">
 
   <!-- PWA Manifest -->
   <link rel="manifest" href="manifest.json">
@@ -65,7 +65,7 @@
   <!-- Preconnect for Performance -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://alipakdelnia.github.io" rel="preconnect">
+  <link href="https://alipakdelnia.ir" rel="preconnect">
   <link href="https://github.com" rel="preconnect">
   <link href="https://linkedin.com" rel="preconnect">
 
@@ -119,8 +119,8 @@
     "alternateName": ["علی پاکدل نیا", "علی پاکدل", "پاکدل نیا", "Ali Pakdelnia"],
     "jobTitle": "Full Stack Developer and Android Developer",
     "description": "Ali Pakdelnia - Experienced Full Stack Developer and Android Developer in Tehran with 5+ years experience in software development. Expert in .NET Core, Kotlin, React, Angular, JavaScript, TypeScript.",
-    "url": "https://alipakdelnia.github.io/",
-    "image": "https://alipakdelnia.github.io/assets/img/my-profile-img.jpg",
+    "url": "https://alipakdelnia.ir/",
+    "image": "https://alipakdelnia.ir/assets/img/my-profile-img.jpg",
     "email": "ali.pakdelnia77@gmail.com",
     "telephone": "+989909601225",
     "address": {
@@ -192,7 +192,7 @@
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "Ali Pakdelnia - Full Stack Developer Portfolio",
-    "url": "https://alipakdelnia.github.io/",
+    "url": "https://alipakdelnia.ir/",
     "description": "Ali Pakdelnia - Experienced Full Stack Developer and Android Developer in Tehran. Expert in .NET Core, Kotlin, React, Angular. Available for freelance projects.",
     "author": {
       "@type": "Person",
@@ -200,7 +200,7 @@
     },
     "potentialAction": {
       "@type": "SearchAction",
-      "target": "https://alipakdelnia.github.io/?s={search_term_string}",
+      "target": "https://alipakdelnia.ir/?s={search_term_string}",
       "query-input": "required name=search_term_string"
     },
     "publisher": {
@@ -219,8 +219,8 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Ali Pakdelnia - Development Services",
-    "url": "https://alipakdelnia.github.io/",
-    "logo": "https://alipakdelnia.github.io/assets/img/my-profile-img.jpg",
+    "url": "https://alipakdelnia.ir/",
+    "logo": "https://alipakdelnia.ir/assets/img/my-profile-img.jpg",
     "description": "Full Stack and Android Development Services by Ali Pakdelnia. Expert in .NET Core, Kotlin, React, Angular. Available for freelance projects and full-time opportunities.",
     "contactPoint": {
       "@type": "ContactPoint",
@@ -275,7 +275,7 @@
 
   <!-- =======================================================
   * Template Name: Ali Pakdelnia Portfolio
-  * Template URL: https://alipakdelnia.github.io/
+  * Template URL: https://alipakdelnia.ir/
   * Updated: Dec 29 2024 with Bootstrap v5.3.3
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
@@ -300,7 +300,7 @@
     <div class="social-links text-center">
       <a href="https://github.com/alipakdelnia" class="github" target="_blank"><i class="bi bi-github"></i></a>
       <a href="https://linkedin.com/in/ali-pakdelnia" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
-      <a href="https://alipakdelnia.github.io" class="globe" target="_blank"><i class="bi bi-globe"></i></a>
+      <a href="https://alipakdelnia.ir" class="globe" target="_blank"><i class="bi bi-globe"></i></a>
     </div>
 
     <!-- Language Switcher -->
@@ -372,7 +372,7 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong data-translate="website_label">Website:</strong> <span>alipakdelnia.github.io</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong data-translate="website_label">Website:</strong> <span>alipakdelnia.ir</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong data-translate="github_label">GitHub:</strong> <span>github.com/alipakdelnia</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong data-translate="linkedin_label">LinkedIn:</strong> <span>linkedin.com/in/ali-pakdelnia</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong data-translate="status_label">Status:</strong> <span data-translate="status_value">Freelance Available</span></li>
