--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>صفحه یافت نشد - علی پاکدل نیا</title>
     <meta name="description" content="صفحه مورد نظر یافت نشد. علی پاکدل نیا - برنامه‌نویس فول استک و توسعه‌دهنده اندروید">
-    <link rel="canonical" href="https://alipakdelnia.github.io/404.html">
+    <link rel="canonical" href="https://alipakdelnia.ir/404.html">
     <style>
         body {
             font-family: 'Tahoma', Arial, sans-serif;
