--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
   * Template Name: Ali Pakdelnia Portfolio
   * Template URL: https://alipakdelnia.ir/
   * Updated: Dec 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * Author: https://alipakdelnia.ir/
+  * License: https://alipakdelnia.ir/
   ======================================================== -->
 </head>
 
@@ -1131,9 +1131,9 @@
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Licensing information: https://alipakdelnia.ir/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+        Designed by <a href="https://alipakdelnia.ir/">Ali Pakdelnia</a> Distributed by <a href="https://github.com/alipakdelnia">github</a>
       </div>
     </div>
 
